Web Kind 2 support (#16)
- Adds support for the web version of Kind 2 primarily by adding the
Kind 2 gateway app that acts as the interface between the LSP and the
remote web extension.

- The gateway gets messages from the extension via a web socket, and
then sends messages to the LSP over the local host, giving the illusion
to the LSP that the extension is still running on the same machine. This
reduces the amount of changes needed in the Java LSP code itself.

- Removed details that required the web extension to use file paths

---------

Co-authored-by: Daniel Larraz <daniel-larraz@users.noreply.github.com>
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>